syntax = "proto3";

package Telemetry;

message KilometersCounter
{
    string startDate = 1;
    double kilometers = 2;
}